<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>Bankprojekt</groupId>
  <artifactId>Bankprojekt</artifactId>
  <version>0.1</version>

  <name>bankprojekt</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>22</maven.compiler.release>
  </properties>

  <dependencies>
   <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
   <dependency>
      <groupId>org.decimal4j</groupId>
      <artifactId>decimal4j</artifactId>
      <version>1.0.3</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>33.0.0-jre</version>
    </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>5.11.0</version>
          <scope>test</scope>
      </dependency>
  </dependencies>

  <build>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.3.1</version>
            <executions>
                <execution>
                    <id>attach-sources</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>jar-no-fork</goal>
                        <goal>test-jar</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.6.3</version>
            <configuration>
                <show>package</show>
            </configuration>
            <executions>
                <execution>
                    <goals>
                        <goal>
                            javadoc
                        </goal>
                        <goal>
                            test-javadoc
                        </goal>
                        <goal>
                            jar
                        </goal>
                        <goal>
                            test-jar
                        </goal>
                    </goals>
                    <phase>package</phase>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>0.8.11</version>
            <executions>
                <execution>
                    <id>default prepare_agent</id>
                    <goals>
                        <goal>
                            prepare-agent
                        </goal>
                    </goals>
                    <phase>
                        validate
                    </phase>
                </execution>
                <execution>
                    <id>default report</id>
                    <goals>
                        <goal>
                            report
                        </goal>
                    </goals>
                    <phase>
                        test
                    </phase>
                    <configuration>
                        <includes>
                            bankprojekt/verarbeitung/Konto.class
                        </includes>
                    </configuration>
                </execution>
            </executions>
        </plugin>
    </plugins>
  </build>
</project>